--- a/teamcog/src/components/appIntro/Point1/description.module.css
+++ b/teamcog/src/components/appIntro/Point1/description.module.css
@@ -13,78 +13,123 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  align-items: center;
+  align-items: flex-end; /* 이미지와 텍스트 컨테이너가 아래에 정렬되도록 수정 */
   flex-grow: 1;
   width: 100%;
 }
 
-.imageContainer {
+.imageWrapper {
   position: relative;
-  width: 40vw;
-  height: 40vw;
-  max-width: 500px;
-  max-height: 500px;
+  width: 50vw;
+  max-width: 600px;
   margin-right: 5vw;
+  display: flex;
+  align-items: center;
+  gap: 0px;
+  right: 1%;
+}
+
+.mainImageContainer {
+  position: relative;
+  width: 120%;
+  right: 10%;
+  height: auto;
+  aspect-ratio: 1 / 1;
+}
+
+.topRightImageContainer {
+  position: absolute;
+  top: 10%;
+  right: -130%;
+  width: 150%;
+  height: 38%;
 }
 
 .textContainer {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  gap: 20px;
+  justify-content: flex-start;
+  gap: 15px;
+  margin-top: 20px;
+  align-self: flex-end;
+  position: relative; /* ➕ */
+  left: -12vw;
+  top: -5vw; /* ➕ 왼쪽으로 이동 */
 }
-
 .korDescription {
-  font-family: "NPS font", sans-serif;
+  font-family: "Spoqa Han Sans Neo", sans-serif;
   font-weight: 600;
-  font-size: 20px;
+  font-size: 18px; /* 글씨 크기 줄임 */
   line-height: 150%;
   color: #000000;
+  text-align: left;
 }
 
 .engDescription {
-  font-family: "NPS font", sans-serif;
+  font-family: "Spoqa Han Sans Neo", sans-serif;
   font-weight: 500;
-  font-size: 20px;
+  font-size: 18px; /* 글씨 크기 줄임 */
   line-height: 150%;
-  color: #c0c0c0;
-}
-
-.footer {
-  width: 100%;
-  text-align: center;
-  padding-top: 20px;
+  color: #00000080;
+  text-align: left;
 }
 
 .korAddedDescription {
-  font-family: "NPS font", sans-serif;
+  font-family: "Spoqa Han Sans Neo", sans-serif;
   font-weight: 400;
-  font-size: 15px;
+  font-size: 14px; /* 글씨 크기 줄임 */
   line-height: 150%;
-  color: #d3d3d3;
-  margin-top: auto;
-  width: 100%;
-  text-align: center;
+  color: #00000080;
+  margin: 0;
+  text-align: left;
 }
+
+.engAddedDescription {
+  font-family: "Spoqa Han Sans Neo", sans-serif;
+  font-weight: 400;
+  font-size: 14px; /* 글씨 크기 줄임 */
+  line-height: 150%;
+  color: #00000080;
+  margin: 0;
+  text-align: left;
+}
+
 @media (max-width: 768px) {
   .mainContent {
     flex-direction: column;
+    align-items: center;
   }
 
-  .imageContainer {
+  .imageWrapper {
     width: 70vw;
-    height: 70vw;
     margin-right: 0;
     margin-bottom: 20px;
   }
 
+  .mainImageContainer {
+    width: 100%;
+    height: auto;
+    aspect-ratio: 1 / 1;
+  }
+
+  .topRightImageContainer {
+    width: 40%;
+  }
+
+  .textContainer {
+    margin-top: 20px;
+    align-items: center;
+  }
+
   .korDescription,
   .engDescription {
-    font-size: 16px;
+    font-size: 14px; /* 모바일 글씨 크기 줄임 */
     text-align: center;
   }
 
-  .footer {
-    position: static;
+  .korAddedDescription,
+  .engAddedDescription {
+    font-size: 11px; /* 모바일 글씨 크기 줄임 */
+    text-align: center;
   }
 }
